# CUDA_jacobianEigenvalue

./: CMakeLists.txt  README.md  chem_utils.cu  chem_utils.cuh  dydt.cu  export_eigenvalue.cu  gpu_macros.cuh  gpu_memory.cu  gpu_memory.cuh  jacob.cu  jacob.cuh  mass_mole.cu  mass_mole.cuh  mechanism.cu  mechanism.cuh  rates.cuh  rxn_rates.cu  rxn_rates_pres_mod.cu  sparse_multiplier.cu  sparse_multiplier.cuh  spec_rates.cu
jacobs/: jac_include.cuh  jac_list_cuda  jacob_0.cu  jacob_0.cuh  jacob_1.cu  jacob_1.cuh  jacob_2.cu  jacob_2.cuh  jacob_3.cu  jacob_3.cuh  jacob_4.cu  jacob_4.cuh  jacob_5.cu  jacob_5.cuh  jacob_6.cu  jacob_6.cuh
